# QRcode

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp
report/: main.aux  main.tex
